--- a/src/views/paginas/reservaEstablecimiento.hbs
+++ b/src/views/paginas/reservaEstablecimiento.hbs
@@ -1,30 +1,32 @@
-<div class="container">          
-            <table class="table table-hover bg-warning">
-                  <h2 class="text-white" style="text-align: center;"><b>RESERVAS</b></h2>
-                <thead>
-                    <tr>
-                        <th>Nro de Cancha</th>
-                        <th>Fecha Reservada</th>
-                        <th>Hora Reservada</th>
-                        <th>Nombre y Apellido</th>
-                        <th>Fecha</th>
-                        <th>Estado</th>
-                        <th>Opcion</th>
-                    </tr>
-                </thead>
+<div class="container mt-5">
+    <table class="table table-hover bg-warning">
+        <h2 class="text-white" style="text-align: center;"><b>RESERVAS</b></h2>
+        <thead>
+            <tr>
+                <th>Nro de Cancha</th>
+                <th>Fecha Reservada</th>
+                <th>Hora Reservada</th>
+                <th>Nombre y Apellido</th>
+                <th>Fecha</th>
+                <th>Estado</th>
+                <th>Opcion</th>
+            </tr>
+        </thead>
 
-                <tbody>
-                    {{#each establecimiento}}
-                    <tr>
-                        <td>{{numeroCancha}}</td>
-                        <td>{{fechaReserva}}</td>
-                        <td>{{hora}}:00 Hs</td>
-                        <td>{{nombre}} {{apellido}}</td>
-                        <td>{{fechas fecha}}</td>
-                        <td>{{estado}}</td>
-                        <td><b><a class="link link-success" href="">Asistio</a></b><br><b><a class="link link-danger" href="">Fallo</a></b></td>
-                    {{/each}}
-                </tbody>
-            </table>
+        <tbody>
+            {{#each establecimiento}}
+            <tr>
+                <td>{{numeroCancha}}</td>
+                <td>{{fechaReserva}}</td>
+                <td>{{hora}}:00 Hs</td>
+                <td>{{nombre}} {{apellido}}</td>
+                <td>{{fechas fecha}}</td>
+                <td>{{estado}}</td>
+                <td><b><a class="link link-success" href="/paginas/asistio/{{idReserva}}&{{idEstablecimiento}}" >Asistio</a></b><br>
+                    <b><a class="link link-danger" href="/paginas/fallo/{{idReserva}}&{{idEstablecimiento}}">Fallo</a></b>
+                </td>
+                {{/each}}
+        </tbody>
+    </table>
 
-        </div>
+</div>
