--- a/src/views/paginas/basquet.hbs
+++ b/src/views/paginas/basquet.hbs
@@ -17,12 +17,10 @@
                         </ul>
                     </a>
                     <div class="d-flex justify-content-between m-auto ">
-                        <form class="d-flex" method="GET" action="">
-                            <input type="text" class="form-control" id= "busqueda" placeholder="Buscar" onkeyup="buscar();"autofocus>
-                            <button class="btn btn-danger" type="submit" id="boton">
-                                <i class="fas fa-search"></i>
-                            </button>
-                        </form>
+                         <input type="text" class="form-control" id= "busqueda" placeholder="Buscar" onkeyup="buscar();"autofocus>
+                        <button class="btn btn-danger" type="submit" id="boton">
+                            <i class="fas fa-search"></i>
+                        </button>
                     </div>
 
                 </div>
@@ -51,13 +49,13 @@
             </div>
 
             <!--Tabla Canchas-->
-            <div id="tablaEquipo" class="col-lg-5 m-2 p-2">
+            <div id="tablaEquipo" class="col-lg-6 m-2 p-2">
                 <form class="d-flex">
                     <a class="navbar-brand" href="#">
-                        <h3 class=" text-white px-5"><b>CANCHAS</b></h3>
+                        <h4 class=" text-white px-4"><b>ESTABLECIMIENTOS</b></h4>
                     </a>
                     <div class="d-flex justify-content-between m-auto ">
-                        <input type="text" class="form-control" id="busqueda" placeholder="Buscar" onkeyup="buscar1();" autofocus required>
+                        <input type="text" class="form-control" id="busqueda1" placeholder="Buscar" onkeyup="buscar1();" autofocus required>
                         <button class="btn btn-danger" type="reset">
                             <i class="fas fa-search"></i> 
                         </button>
