--- a/src/views/paginas/padel.hbs
+++ b/src/views/paginas/padel.hbs
@@ -16,18 +16,12 @@
                             <li><a class="dropdown-item" href="/paginas/jugadores/{{user.idUsuarios}}">Ver Jugadores</a></li>
                         </ul>
                     </a>
-                    <div class="d-flex justify-content-between m-auto ">
-                        <form class="d-flex" method="GET" action="">
-                            <input type="search" class="form-control" id= "formulario" placeholder="Buscar" autofocus>
-                            <button class="btn btn-danger" type="submit" id="boton">
-                                <i class="fas fa-search"></i>
-                            </button>
-                        </form>
-                       <script>
-                           const formulario = document.querySelector('#formulario');
-                           const boton = document.querySelector('#boton');
-                           
-                       </script> 
+                    <div class="d-flex justify-content-between m-auto ">  
+                        <input type="search" class="form-control" id= "busqueda" placeholder="Buscar"
+                        onkeyup="buscar();" autofocus>
+                        <button class="btn btn-danger" type="submit" id="boton">
+                            <i class="fas fa-search"></i>
+                        </button>
                     </div>
                 </div>
                 <div id="scroll">
@@ -39,7 +33,7 @@
                                 <th>Deporte</th>
                             </tr>
                         </thead>
-                        <tbody>
+                        <tbody id="tblEquipos">
                             {{#each equipos}}
                             <tr>
                                 <td data-bs-toggle="tooltip" data-bs-placement="top" title="{{email}}">
@@ -54,14 +48,14 @@
                 </div>
             </div>
     <!--Tabla Canchas-->
-            <div id="tablaEquipo" class="col-md-5 m-2 p-2">
+            <div id="tablaEquipo" class="col-md-6 m-2 p-2">
                 <form class="d-flex">
                     <a class="navbar-brand" href="#">
-                        <h3 class=" text-white px-5"><b>CANCHAS</b></h3>
+                        <h4 class=" text-white px-4"><b>ESTABLECIMIENTOS</b></h4>
                     </a>
 
                     <div class="d-flex justify-content-between m-auto ">
-                        <input type="text" class="form-control" name="buscarCancha" placeholder="Buscar" autofocus required>
+                        <input type="text" class="form-control" name="buscarCancha" id="busqueda1" placeholder="Buscar" onkeyup="buscar1();"autofocus required>
                         <button class="btn btn-danger" type="reset">
                             <i class="fas fa-search"></i> 
                         </button>
@@ -76,7 +70,7 @@
                                 <th>Dirección</th>
                             </tr>
                         </thead>
-                        <tbody>                            
+                        <tbody id="tblCancha">                            
                             {{#each canchas}}
                             <tr>
                                 <td data-bs-toggle="tooltip" data-bs-placement="top" title="{{email}}">
@@ -132,3 +126,51 @@
         </div>
     </div>
 </div>
+<script type="text/javascript">
+    function buscar() {
+        var tabla = document.getElementById('tblEquipos');
+        var busqueda = document.getElementById('busqueda').value.toLowerCase();
+        var cellsOfRow = " ";
+        var found = false;
+        var compareWith = " ";
+        for (var i = 0; i < tabla.rows.length; i++) {
+            cellsOfRow = tabla.rows[i].getElementsByTagName('td')
+            found = false;
+            for (var j = 0; j < cellsOfRow.length && !found; j++) {
+                compareWith = cellsOfRow[j].innerHTML.toLowerCase();
+                if (busqueda.length == 0 || (compareWith.indexOf(busqueda) > -1)) {
+                    found = true;
+                }
+            }
+            if (found) {
+                tabla.rows[i].style.display = '';
+                
+            } else {
+                tabla.rows[i].style.display = 'none';  
+            }
+         
+        }  
+    }
+    function buscar1() {
+        var tabla = document.getElementById('tblCancha');
+        var busqueda = document.getElementById('busqueda1').value.toLowerCase();
+        var cellsOfRow = " ";
+        var found = false;
+        var compareWith = " ";
+        for (var i = 0; i < tabla.rows.length; i++) {
+            cellsOfRow = tabla.rows[i].getElementsByTagName('td')
+            found = false;
+            for (var j = 0; j < cellsOfRow.length && !found; j++) {
+                compareWith = cellsOfRow[j].innerHTML.toLowerCase();
+                if (busqueda.length == 0 || (compareWith.indexOf(busqueda) > -1)) {
+                    found = true;
+                }
+            }
+            if (found) {
+                tabla.rows[i].style.display = '';
+            } else {
+                tabla.rows[i].style.display = 'none';
+            }
+        }
+    }
+</script>
