--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -282,3 +282,62 @@ h6, h5{
   background-size: cover;
   background-attachment: fixed    
 }
+.barraLateral {
+  position: fixed;
+  height: 100%;
+  width: 0;
+  top: 4.8rem;
+  left: 0;
+  z-index: 1;
+  background-color: #00324b;
+  overflow-x: hidden;
+  transition: 0.4s;
+  padding: 1rem 0;
+  box-sizing: border-box;
+}
+.barraLateral .boton-cerrar {
+  position: absolute;
+  top: 0.5rem;
+  right: 1rem;
+  font-size: 2rem;
+  display: block;
+  padding: 0;
+  line-height: 1.5rem;
+  margin: 0;
+  height: 32px;
+  width: 32px;
+  text-align: center;
+}
+.barraLateral ul, .barraLateral li{
+  margin: 0;
+  padding: 0;
+  list-style: none inside;
+}
+.barraLateral ul {
+  margin: 4rem auto;
+  display: block;
+  width: 80%;
+  min-width: 200px;
+}
+.barraLateral a {
+  display:  block;
+  font-size: 120%;
+  color: #eee;
+  text-decoration:  none;
+}
+.barraLateral a:hover{
+  color: #fff;
+  background-color: #f90;
+}
+#contenido {
+  transition: margin-left .4s;
+  padding: 1rem;
+}
+.abrir-cerrar {
+  color: #afdcfc;
+  font-size: 1rem;
+}
+
+#cerrar {
+  display: none;
+}
