--- a/src/views/paginas/vistaAdmin.hbs
+++ b/src/views/paginas/vistaAdmin.hbs
@@ -1,13 +1,28 @@
 <script type="text/javascript">
+    function mostrarBarra() {
+        document.getElementById("barraLateral").style.width = "300px";
+        document.getElementById("contenido").style.marginLeft = "300px";
+        document.getElementById("abrir").style.display = "none";
+        document.getElementById("cerrar").style.display = "inline";
+    }
+
+    function ocultarBarra() {
+        document.getElementById("barraLateral").style.width = "0";
+        document.getElementById("contenido").style.marginLeft = "0";
+        document.getElementById("abrir").style.display = "inline";
+        document.getElementById("cerrar").style.display = "none";
+    }
     function mostrar(id, n) {
         var id
         if (id == 0) {
-            id = 'tablaEquipo'
+            id = 'tablaEquipos'
         }
         if (id == 1) {
             id = 'tablaUsuario'
         } if (id == 2) {
             id = 'tablaCanchas'
+        }if (id == 3) {
+            id = 'tablaDeportes'
         }
         var estado
         if (n == 1) {
@@ -18,111 +33,130 @@
     }
 
 </script>
-<div class="row">
-<div class="col md-4" style="color: red;">
-    <h4>hola</h4>
-    <h4>hola</h4>
-    <h4>hola</h4>
-    <h4>hola</h4>
-    <h4>hola</h4>
-    <h4>hola</h4>
-    <h4>hola</h4>
-    <h4>hola</h4>
-    <h4>hola</h4>
-    <h4>hola</h4>
-    <h4>hola</h4>
-</div>
-<div class="col md-8">
-    <div class="container mt-2">
-        <div class="btn-group mb-3">
-            <button class="btn btn-outline-info" onclick="mostrar(2,1)" ondblclick="mostrar(2,0)">
+<div id="barraLateral" class="barraLateral" style="width: 0px;">
+    <a href="#" class="boton-cerrar" onclick="ocultarBarra()">×</a>
+    <u>
+        <li><button class="btn btn-outline-info mb-3" onclick="mostrar(2,1)" ondblclick="mostrar(2,0)">
                 <h4><b>CANCHAS</b></h4>
-            </button>
-            <button class="btn btn-outline-info" onclick="mostrar(0,1)" ondblclick="mostrar(0,0)">
+            </button></li>
+        <li> <button class="btn btn-outline-info mb-3" onclick="mostrar(0,1)" ondblclick="mostrar(0,0)">
                 <h4><b>EQUIPOS</b></h4>
-            </button>
-            <button class="btn btn-outline-info" onclick="mostrar(1,1)" ondblclick="mostrar(1,0)">
+            </button></li>
+        <li><button class="btn btn-outline-info mb-3" onclick="mostrar(1,1)" ondblclick="mostrar(1,0)">
                 <h4><b>USUARIOS</b></h4>
+            </button></li>
+        <li><button class="btn btn-outline-info mb-3" onclick="mostrar(3,1)" ondblclick="mostrar(3,0)">
+                <h4><b>DEPORTES</b></h4>
+            </button></li>
+        <li><form action="/paginas/crearDep" method="get">
+            <label class="text-center text-white" for="dep" style="font-size: 1.5rem;">Crear Deporte</label>
+            <input id="dep" type=" text" name="deporte" placeholder="Ingrese Deporte">
+            
+            <button class="btn btn-success">
+                <i class="fas fa-thumbs-up"></i>
             </button>
+            </form>
+        </li>
+    </u>
+</div>
+<div id="contenido" style="margin-left: 0px;">
+    <a id="abrir" class="abrir-cerrar" href="javascript:void(0)" onclick="mostrarBarra()" style="display: inline;">
+        Abrir menu
+    </a>
+    <a id="cerrar" class="abrir-cerrar" href="javascript:void(0)" onclick="ocultarBarra()" style="display: none;">
+        Cerrar menu
+    </a>
+
+    <div class="justify-content-around">
+        <div class="container-fluid" id="tablaDeportes" style="display: none;">
+            <table class="table table-hover bg-warning">
+                <h2 class="text-white" style="text-align: center;"><b>DEPORTES</b></h2>
+                <thead>
+                    <tr>
+                        <th>Id</th>
+                        <th>Deporte</th>                  
+                    </tr>
+                </thead>
+
+                <tbody>
+                    {{#each deporte}}
+                    <tr>
+                        <td>{{idDeportes}}</td>
+                        <td>{{deporte}}</td>
+                        {{/each}}
+                </tbody>
+            </table>
         </div>
-        <div class="justify-content-around">
-            <div class="container-fluid" id="tablaEquipo" style="display: none;">
-                <table class="table table-hover bg-warning">
-                    <h2 class="text-white" style="text-align: center;"><b>EQUIPOS</b></h2>
-                    <thead>
-                        <tr>
-                            <th>Id</th>
-                            <th>Nombre Equipo</th>
-                            <th>Deporte</th>
-                            <th>Usuario</th>
-                        </tr>
-                    </thead>
+        <div class="container-fluid" id="tablaEquipos" style="display: none;">
+            <table class="table table-hover bg-warning">
+                <h2 class="text-white" style="text-align: center;"><b>EQUIPOS</b></h2>
+                <thead>
+                    <tr>
+                        <th>Id</th>
+                        <th>Nombre Equipo</th>
+                        <th>Deporte</th>
+                        <th>Usuario</th>
+                    </tr>
+                </thead>
 
-                    <tbody>
-                        {{#each equipos}}
-                        <tr>
-                            <td>{{idEquipo}}</td>
-                            <td>{{nombreEquipo}}</td>
-                            <td>{{idDeporte}}</td>
-                            <td>{{idUsuarios}}</td>
-                            {{/each}}
-                    </tbody>
-                </table>
-
-            </div>
-            <div class="container-fluid" id="tablaCanchas" style="display: none;">
-                <table class="table table-hover bg-warning">
-                    <h2 class="text-white" style="text-align: center;"><b>CANCHAS</b></h2>
-                    <thead>
-                        <tr>
-                            <th>Id</th>
-                            <th style="text-align: center;"><span style="color: red;">Nombre</span></th>
-                            <th style="text-align: center;">Direccion</th>
-                            <th style="text-align: center;">Contacto</th>
-                            <th style="text-align: center;">Dueño</th>
-
-                        </tr>
-                    </thead>
-
-                    <tbody>
-                        {{#each establecimiento}}
-                        <tr>
-                            <td>{{idEstablecimiento}}</td>
-                            <td>{{nombreEstablecimiento}}</td>
-                            <td>{{direccion}}</td>
-                            <td>{{cuit}}</td>
-                            <td>{{idUsuarios}}</td>
-                        </tr>
+                <tbody>
+                    {{#each equipos}}
+                    <tr>
+                        <td>{{idEquipo}}</td>
+                        <td>{{nombreEquipo}}</td>
+                        <td>{{idDeporte}}</td>
+                        <td>{{idUsuarios}}</td>
                         {{/each}}
-                    </tbody>
-                </table>
+                </tbody>
+            </table>
+        </div>
+        <div class="container-fluid" id="tablaCanchas" style="display: none;">
+            <table class="table table-hover bg-warning">
+                <h2 class="text-white" style="text-align: center;"><b>CANCHAS</b></h2>
+                <thead>
+                    <tr>
+                        <th>Id</th>
+                        <th style="text-align: center;">Nombre</th>
+                        <th style="text-align: center;">Direccion</th>
+                        <th style="text-align: center;">Contacto</th>
+                        <th style="text-align: center;">Dueño</th>
 
-            </div>
-            <div id="tablaUsuario" class="container-fluid" style="display: none;">
-                <table class="table table-hover bg-warning">
-                    <h2 class="text-white" style="text-align: center;"><b>USUARIOS</b></h2>
-                    <thead>
-                        <tr>
-                            <th>Usuario</th>
-                            <th>Nombre</th>
-                            <th>Contacto</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {{#each usuarios}}
-                        <tr>
-                            <td>{{nombreUsuario}}</td>
-                            <td>{{nombre}} {{apellido}}</td>
-                            <td>{{email}}</td>
-                        </tr>
-                        {{/each}}
-                    </tbody>
-                </table>
-            </div>
+                    </tr>
+                </thead>
+
+                <tbody>
+                    {{#each establecimiento}}
+                    <tr>
+                        <td>{{idEstablecimiento}}</td>
+                        <td>{{nombreEstablecimiento}}</td>
+                        <td>{{direccion}}</td>
+                        <td>{{cuit}}</td>
+                        <td>{{idUsuarios}}</td>
+                    </tr>
+                    {{/each}}
+                </tbody>
+            </table>
+        </div>
+        <div id="tablaUsuario" class="container-fluid" style="display: none;">
+            <table class="table table-hover bg-warning">
+                <h2 class="text-white" style="text-align: center;"><b>USUARIOS</b></h2>
+                <thead>
+                    <tr>
+                        <th>Usuario</th>
+                        <th>Nombre</th>
+                        <th>Contacto</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {{#each usuarios}}
+                    <tr>
+                        <td>{{nombreUsuario}}</td>
+                        <td>{{nombre}} {{apellido}}</td>
+                        <td>{{email}}</td>
+                    </tr>
+                    {{/each}}
+                </tbody>
+            </table>
         </div>
     </div>
-</div>
-</div>
-<div style="float: left" class="col-2  p-4">
-    <a id="volver" href="javascript: history.go(-1)" type="button" class="btn btn-danger">Volver</a>
 </div>
