--- a/src/views/paginas/futbol.hbs
+++ b/src/views/paginas/futbol.hbs
@@ -9,32 +9,17 @@
                         <a class="btn btn-dark btn-lg dropdown-toggle text-white" href="#" id="dropdown04"
                             data-bs-toggle="dropdown" aria-expanded="false">EQUIPOS</a>
                         <ul class="dropdown-menu" aria-labelledby="dropdown04">
-<<<<<<< HEAD
-                            <li><a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#misEquipo"
-                                    data-bs-whatever="@equipo">Mis Equipos</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="/paginas/crearEquipoFutbol/{{user.idUsuarios}}">Crear
-                                    Equipo</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="/paginas/jugadores/{{user.idUsuarios}}">Ver Jugadores</a>
-                            </li>
-=======
                             <li><a class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#misEquipo" data-bs-whatever="@equipo">Mis Equipos</a></li>
                             <li><hr class="dropdown-divider"></li>
                             <li><a class="dropdown-item" href="/paginas/crearEquipoFutbol/{{user.idUsuarios}}">Crear Equipo</a></li>
                             <li><hr class="dropdown-divider"></li>
                             <li><a class="dropdown-item" href="/paginas/jugadores/{{user.idUsuarios}}">Ver Jugadores</a></li>
->>>>>>> 6f46d83282b874d3e40492588120e6b424779f94
                         </ul>
                     </a>
                     <div class="d-flex justify-content-between m-auto ">
                         <input id="busqueda" type="text" class="form-control" placeholder="Buscar" onkeyup="buscar();"
                             autofocus>
-                        <button class="btn btn-danger" id="boton">
+                        <button class="btn btn-danger" id="boton" disabled>
                             <i class="fas fa-search"></i>
                         </button>
                     </div>
@@ -74,13 +59,8 @@
                         <h3 class=" text-white px-5"><b>CANCHAS</b></h3>
                     </a>
                     <div class="d-flex justify-content-between m-auto ">
-<<<<<<< HEAD
-                        <input id="busqueda1" type="text" class="card-filter" placeholder="Buscar" onkeyup="buscar1();" autofocus>
-                        <button class="btn btn-danger" type="reset" id="boton">
-=======
-                        <input type="text" class="form-control" name="buscarCancha" placeholder="Buscar" autofocus>
-                        <button class="btn btn-danger" type="reset">
->>>>>>> 6f46d83282b874d3e40492588120e6b424779f94
+                        <input id="busqueda1" type="text" class="form-control" placeholder="Buscar" onkeyup="buscar1();" autofocus>
+                        <button class="btn btn-danger" type="reset" id="boton" disabled>
                             <i class="fas fa-search"></i>
                         </button>
                     </div>
