--- a/src/views/paginas/duenio.hbs
+++ b/src/views/paginas/duenio.hbs
@@ -7,7 +7,7 @@
                         <a class="btn btn-dark btn-lg dropdown-toggle text-white" href="#" id="dropdown04"
                             data-bs-toggle="dropdown" aria-expanded="false">ESTABLECIMIENTO</a>
                         <ul class="dropdown-menu" aria-labelledby="dropdown04">
-                            <li><a class="dropdown-item" href="establecimiento">Agregar Establecimiento</a></li>
+                            <li><a class="dropdown-item" href="establecimiento/{{idUsuarios}}">Agregar Establecimiento</a></li>
                         </ul>
                     </a>
                      <a class="navbar-brand">
