historial de reservas hecho

--- a/src/views/paginas/vistaAdmin.hbs
+++ b/src/views/paginas/vistaAdmin.hbs
@@ -98,7 +98,7 @@
                         <th>Id</th>
                         <th>Nombre Equipo</th>
                         <th>Deporte</th>
-                        <th>Usuario</th>                        
+                        <th>Capitan</th>                        
                     </tr>
                 </thead>
                 <tbody>
@@ -107,7 +107,7 @@
                         <td>{{idEquipo}}</td>
                         <td>{{nombreEquipo}}</td>
                         <td>{{deporte}}</td>
-                        <td>{{idUsuarios}}</td>
+                        <td>{{nombre}} {{apellido}}</td>
                         {{/each}}
                 </tbody>
             </table>
