--- a/src/views/paginas/reservaEstablecimiento.hbs
+++ b/src/views/paginas/reservaEstablecimiento.hbs
@@ -1,5 +1,6 @@
 <div class="container mt-5">
     <table class="table table-hover bg-warning">
+        <button class="btn btn-info" onclick="location.href='/paginas/historialReservas/{{idEstablecimiento}}'">HISTORIAL</button>
         <h2 class="text-white" style="text-align: center;"><b>RESERVAS</b></h2>
         <thead>
             <tr>
@@ -28,5 +29,8 @@
                 {{/each}}
         </tbody>
     </table>
+      <div class="col-2  p-4">
+        <a id="volver" href="/paginas/duenio" type="button" class="btn btn-primary">Establecimiento</a>
+    </div>
 
 </div>
