agregue buton a la reserva

--- a/src/views/reserva/reservaDeporte.hbs
+++ b/src/views/reserva/reservaDeporte.hbs
@@ -28,8 +28,13 @@
                 </div>
 
             </div>
+            <div class="col">
+                  <div id="btnCentro" class="mx-auto">
+                <!-- logo de la app -->
+                    <img src="/img/app/logo4.png" alt="Logo App" class="mx-1">
+                </div>
+            </div>
         </div>
-
     </div>
 
 </div>
