--- a/src/views/paginas/duenio.hbs
+++ b/src/views/paginas/duenio.hbs
@@ -20,7 +20,7 @@
                         </ul>
                     </a>
                 </div>
-                <div id="scroll">
+                <div id="scrollEstablecimientos">
                     <table class="table table-hover table-info">
                         <thead>
                             <tr>
