--- a/src/views/paginas/futbol.hbs
+++ b/src/views/paginas/futbol.hbs
@@ -71,7 +71,7 @@
                             <tr>
                                 <th>Establecimiento</th>
                                 <th>Dirección</th>
-                                <th>Deporte</th>
+                                <th>Opción</th>
                             </tr>
                         </thead>
                         <tbody id="tblCancha">
@@ -81,7 +81,7 @@
                                     <a href="/paginas/verCancha/{{idEstablecimiento}}">{{nombreEstablecimiento}}</a>
                                 </td>
                                 <td>{{direccion}}</td>
-                                <td>#</td>
+                                <td><a href="/paginas/verMapa/{{idEstablecimiento}}">Ver mapa</a></td>
                             </tr>
                             {{/each}}
                         </tbody>
