--- a/src/views/paginas/basquet.hbs
+++ b/src/views/paginas/basquet.hbs
@@ -67,6 +67,7 @@
                             <tr>
                                 <th>Establecimiento</th>
                                 <th>Dirección</th>
+                                <th>Opción</th>
                             </tr>
                         </thead>
                         <tbody id="tblCancha">
@@ -76,6 +77,7 @@
                                     <a href="/paginas/verCancha/{{idEstablecimiento}}">{{nombreEstablecimiento}}</a>
                                 </td>
                                 <td>{{direccion}}</td>
+                                <td><a href="/paginas/verMapa/{{idEstablecimiento}}">Ver mapa</a></td>
                             </tr>
                             {{/each}}
                         </tbody>
