--- a/src/views/paginas/establecimiento.hbs
+++ b/src/views/paginas/establecimiento.hbs
@@ -8,11 +8,11 @@
             
             <div class="input-group mb-3">          
                 <b><span style="color: red;">*  </span></b>                      
-                <input type="number" class="form-control" name="cuit" placeholder="CUIT (sin guiones)" maxlength="11" minlength="11" required>
+                <input type="number" class="form-control" name="cuit" placeholder="CUIT (sin guiones)" maxlength="11" minlength="11" required autofocus>
             </div>
             <div class="input-group mb-3">          
                 <b><span style="color: red;">*  </span></b>                      
-                <input type="text" class="form-control" name="nombreEstablecimiento" placeholder="Nombre del establecimiento" required autofocus>
+                <input type="text" class="form-control" name="nombreEstablecimiento" placeholder="Nombre del establecimiento" required >
             </div>
             <div class="input-group mb-3">          
                 <b><span style="color: red;">*  </span></b>                      
