--- a/src/views/paginas/padel.hbs
+++ b/src/views/paginas/padel.hbs
@@ -68,6 +68,7 @@
                             <tr>
                                 <th>Establecimiento</th>
                                 <th>Dirección</th>
+                                <th>Opción</th>
                             </tr>
                         </thead>
                         <tbody id="tblCancha">                            
@@ -77,6 +78,7 @@
                                     <a href="/paginas/verCancha/{{idEstablecimiento}}">{{nombreEstablecimiento}}</a>
                                 </td>
                                 <td>{{direccion}}</td>
+                                <td><a href="/paginas/verMapa/{{idEstablecimiento}}">Ver mapa</a></td>
                             </tr>
                             {{/each}}
                         </tbody>
