diseño reservas, historial

--- a/src/views/paginas/establecimiento.hbs
+++ b/src/views/paginas/establecimiento.hbs
@@ -16,10 +16,10 @@
             </div>
             <div class="input-group mb-3">          
                 <b><span style="color: red;">*  </span></b>                      
-                <input type="text" class="form-control" name="direccion" placeholder="Direccion" required>
+                <input type="text" class="form-control" name="direccion" placeholder="Dirección" required>
             </div>    
                                      
-            <b><span style="color: red;"><b>*</b></span><span style="font-size:small"> CAMPOS OBLIGATORIOS</span></b>                          
+            <b><span style="color: red;"><b>*</b></span><span style="font-size:small; color:white"> CAMPOS OBLIGATORIOS</span></b>                          
             
             <span><hr class="dropdown-divider"></span>
             <div class="col-md-6 mx-auto pb-2">
