--- a/src/views/paginas/reservaEstablecimiento.hbs
+++ b/src/views/paginas/reservaEstablecimiento.hbs
@@ -1,36 +1,42 @@
-<div class="container mt-5">
-    <table class="table table-hover bg-warning">
-        <button class="btn btn-info" onclick="location.href='/paginas/historialReservas/{{idEstablecimiento}}'">HISTORIAL</button>
-        <h2 class="text-white" style="text-align: center;"><b>RESERVAS</b></h2>
-        <thead>
-            <tr>
-                <th>Nro de Cancha</th>
-                <th>Fecha Reservada</th>
-                <th>Hora Reservada</th>
-                <th>Nombre y Apellido</th>
-                <th>Fecha</th>
-                <th>Estado</th>
-                <th>Opcion</th>
-            </tr>
-        </thead>
+<div id="cancha">
+    <div class="container-fluid">
+        <div class="card text-center mb-4">
+            <h2 class="mb-3 mx-auto">RESERVAS</h2>
+        </div>
+        <div id="scrollMisCanchas" class="container">
+            <table class="table table-hover bg-warning">
+                <thead>
+                    <tr>
+                        <th>Nº de Cancha</th>
+                        <th>Fecha Reservada</th>
+                        <th>Hora Reservada</th>
+                        <th>Nombre y Apellido</th>
+                        <th>Fecha</th>
+                        <th>Estado</th>
+                        <th>Opcion</th>
+                    </tr>
+                </thead>
 
-        <tbody>
-            {{#each establecimiento}}
-            <tr>
-                <td>{{numeroCancha}}</td>
-                <td>{{fechaReserva}}</td>
-                <td>{{hora}}:00 Hs</td>
-                <td>{{nombre}} {{apellido}}</td>
-                <td>{{fechas fecha}}</td>
-                <td>{{estado}}</td>
-                <td><b><a class="link link-success" href="/paginas/asistio/{{idReserva}}&{{idEstablecimiento}}" >Asistio</a></b><br>
-                    <b><a class="link link-danger" href="/paginas/fallo/{{idReserva}}&{{idEstablecimiento}}">Fallo</a></b>
-                </td>
-                {{/each}}
-        </tbody>
-    </table>
-      <div class="col-2  p-4">
-        <a id="volver" href="/paginas/duenio" type="button" class="btn btn-primary">Establecimiento</a>
+                <tbody>
+                    {{#each establecimiento}}
+                    <tr>
+                        <td>{{numeroCancha}}</td>
+                        <td>{{fechaReserva}}</td>
+                        <td>{{hora}}:00 Hs</td>
+                        <td>{{nombre}} {{apellido}}</td>
+                        <td>{{fechas fecha}}</td>
+                        <td>{{estado}}</td>
+                        <td><b><a class="link link-success" href="/paginas/asistio/{{idReserva}}&{{idEstablecimiento}}" >Asistió</a></b><br>
+                            <b><a class="link link-danger" href="/paginas/fallo/{{idReserva}}&{{idEstablecimiento}}">Falló</a></b>
+                        </td>
+                    </tr>
+                    {{/each}}
+                </tbody>
+            </table>
+        </div>
+        <div class="p-4">
+            <a id="volver" href="/paginas/duenio" type="button" class="btn btn-primary">Volver</a>
+            <button class="btn btn-success" onclick="location.href='/paginas/historialReservas/{{idEstablecimiento}}'">Ver historial</button>
+        </div>
     </div>
-
 </div>
