--- a/src/views/paginas/futbol.hbs
+++ b/src/views/paginas/futbol.hbs
@@ -1,6 +1,6 @@
 <div id="futbol">
     <div class="container-fluid">
-        <div class="row justify-content-between">
+        <div class="row justify-content-between pt-5">
             <!--Tabla Equipos-->
             <div id="tablaEquipo" class="col-lg-5 m-2 p-2">
                 <div class="d-flex">
