--- a/src/views/paginas/reservaEstablecimiento.hbs
+++ b/src/views/paginas/reservaEstablecimiento.hbs
@@ -1,5 +1,5 @@
 <div id="cancha">
-    <div class="container-fluid">
+    <div class="container-fluid pt-5">
         <div class="card text-center mb-4">
             <h2 class="mb-3 mx-auto">RESERVAS</h2>
         </div>
