--- a/src/views/reserva/reservaDeporte1.hbs
+++ b/src/views/reserva/reservaDeporte1.hbs
@@ -17,10 +17,10 @@
                     </div>                    
                     <div class="col-1 mt-5 py-1">
                         <a id="volver" href="/paginas/reservaDeporte" type="button"
-                            class="btn btn-outline-danger">Volver</a>
+                            class="btn btn-danger">Volver</a>
                     </div>
                     <div class="col-1 py-1">
-                        <a id="volver" href="/paginas/inicio" type="button" class="btn btn-outline-danger">Salir</a>
+                        <a id="volver" href="/paginas/inicio" type="button" class="btn btn-danger">Salir</a>
                     </div>
 
                 </div>
