--- a/src/views/reserva/reservaDeporte2.hbs
+++ b/src/views/reserva/reservaDeporte2.hbs
@@ -16,10 +16,10 @@
                         </div>
                         {{!-- <button id="botonReservar" type="submit" class="btn btn-success text-dark" data-bs-toggle="modal" data-bs-target="#exampleModal" disabled>Reservar</button> --}}
                         <div class="col-1 mt-5 py-1">
-                            <a id="volver" href="javascript: history.go(-1)" type="button" class="btn btn-outline-danger">Volver</a>
+                            <a id="volver" href="javascript: history.go(-1)" type="button" class="btn btn-danger">Volver</a>
                         </div>
                         <div class="col-1 py-1">
-                            <a id="volver" href="/paginas/inicio" type="button" class="btn btn-outline-danger">Salir</a>
+                            <a id="volver" href="/paginas/inicio" type="button" class="btn btn-danger">Salir</a>
                         </div>
                     </form>
                 </div>
