--- a/src/views/paginas/reservaUsuario.hbs
+++ b/src/views/paginas/reservaUsuario.hbs
@@ -33,7 +33,7 @@
      
            <div class="row py-5">
         <div style="float: left" class="col-2 p-3">
-            <a id="volver" href="javascript: history.go(-1)" type="button" class="btn btn-danger">Volver</a>
+            <a id="volver" href="/paginas/deporte" type="button" class="btn btn-danger">Salir</a>
         </div>
     </div>
     </div> 
