diseño cursor, jugadores, tutoriales

--- a/src/views/partials/barra.hbs
+++ b/src/views/partials/barra.hbs
@@ -36,15 +36,15 @@
                     <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-bs-toggle="dropdown"
                         aria-expanded="false">Tutorial</a>
                     <ul class="dropdown-menu" aria-labelledby="dropdown04">
-                        <li><a class="dropdown-item" href="/paginas/tutorialJugador">Ingreso como jugador</a></li>
+                        <li><a class="dropdown-item" href="/paginas/tutorialJugador">¿Dónde ingreso como jugador?</a></li>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
-                        <li><a class="dropdown-item" href="/paginas/tutorialCancha">Ingreso como dueño de cancha</a></li>
+                        <li><a class="dropdown-item" href="/paginas/tutorialCancha">¿Dónde ingreso como dueño de cancha?</a></li>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
-                        <li><a class="dropdown-item" href="/paginas/tutorialReserva">Realizar reserva</a></li>
+                        <li><a class="dropdown-item" href="/paginas/tutorialReserva">¿Cómo realizo una reserva?</a></li>
                     </ul>
                 </li>
                 
