--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -52,21 +52,24 @@ h6, h5{
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  background-attachment: fixed    
+  background-attachment: fixed;
+  cursor: url(../img/app/iconF.png), auto;
 }
 #basquet {
   background-image: url(../img/app/basq.jpg);
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
-  background-attachment: fixed    
+  background-attachment: fixed;
+  cursor: url(../img/app/iconB.png), auto;
 }
 #padel {
   background-image: url(../img/app/padd.jfif);
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
-  background-attachment: fixed    
+  background-attachment: fixed;
+  cursor: url(../img/app/iconP.png), auto;    
 }
 #tablaEquipo {
   background: rgba(0, 0, 0, 0.623);
@@ -122,7 +125,8 @@ h6, h5{
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
-  background-attachment: fixed    
+  background-attachment: fixed;
+  
 }
 
 #modalCancha-header{
