--- a/src/views/paginas/jugadores.hbs
+++ b/src/views/paginas/jugadores.hbs
@@ -1,8 +1,8 @@
-<div id="formularioF" class="container">
+<div id="cancha" class="container-fluid">
     <div id="scrollJugador" class="col-md-9 m-auto p-4">
-        <table class="table table-dark">
-            <h3><p id="semiTransparente" class="text-center py-2" style="color: rgb(0, 0, 0);">JUGADORES</p></h3>
-            <thead class="table-danger">
+        <table class="table table-hover table-dark">
+            <h3><p class="card text-center py-2">JUGADORES</p></h3>
+            <thead class="table">
                 <th>Nombre/Apellido</th>
                 <th>Nombre de Usuario</th>
                 <th>Email</th>
