--- a/src/views/paginas/reservaUsuario.hbs
+++ b/src/views/paginas/reservaUsuario.hbs
@@ -1,41 +1,42 @@
 <div id="ticket">
-    <div class="container p-5">
-        <div class="container text-center bg-white">
-            <h4 style="color: red;"><p>* Las reservas se podran cancelar 4hs antes de la fecha seleccionada</p></h4>
+    <div class="container-fluid pt-5">
+        <div class="container card text-center mb-3">
+            <h5 style="color: rgba(255, 0, 0, 0.589);"><p>* Las reservas se podran cancelar 4hs antes de la fecha seleccionada</p></h5>
+            <h2><b>MIS RESERVAS</b></h2>
         </div>
-        <table class="table table-success table-striped ">
-            <h2 class="text-white text-center mb-3">Mis Reservas</h2>
-            <thead>
-                <th>Fecha</th>
-                <th>Establecimiento</th>
-                <th>Cancha</th>
-                <th>Deporte</th>
-                <th>Fecha Reservada</th>
-                <th>Hora</th>
-                <th>Opcion</th>
-            </thead>
-            <tbody id="tablaReserva">
-                {{#each reservas}}
-                <tr>
-                    <td>{{fechas fecha}}</td>
-                    <td>{{nombreEstablecimiento}}</td>
-                    <td>{{numeroCancha}}</td>
-                    <td>{{deporte}}</td>
-                    <td>{{fechaReserva}}</td>
-                    <td>{{ hora}}:00 Hs</td>
-                    <td><form action="/paginas/reservaUsuarioCancelar/{{idReserva}}" method="get">
-                    <button class="btn btn-warning">Cancelar Reserva</button>
-                    </form></td>
-                </tr>
-                {{/each}}
-            </tbody>
-        </table>
-     
-           <div class="row py-5">
-        <div style="float: left" class="col-2 p-3">
-            <a id="volver" href="javascript: history.go(-1)" type="button" class="btn btn-danger">Volver</a>
+        <div class="container">
+            <table class="table table-success table-striped ">
+                <thead>
+                    <th>Fecha</th>
+                    <th>Establecimiento</th>
+                    <th>Cancha</th>
+                    <th>Deporte</th>
+                    <th>Fecha Reservada</th>
+                    <th>Hora</th>
+                    <th>Opcion</th>
+                </thead>
+                <tbody id="tablaReserva">
+                    {{#each reservas}}
+                    <tr>
+                        <td>{{fechas fecha}}</td>
+                        <td>{{nombreEstablecimiento}}</td>
+                        <td>{{numeroCancha}}</td>
+                        <td>{{deporte}}</td>
+                        <td>{{fechaReserva}}</td>
+                        <td>{{ hora}}:00 Hs</td>
+                        <td><form action="/paginas/reservaUsuarioCancelar/{{idReserva}}" method="get">
+                        <button class="btn btn-warning">Cancelar Reserva</button>
+                        </form></td>
+                    </tr>
+                    {{/each}}
+                </tbody>
+            </table>
         </div>
-    </div>
+        <div class="row py-5">
+            <div style="float: left" class="col-2 p-3">
+                <a id="volver" href="javascript: history.go(-1)" type="button" class="btn btn-danger">Volver</a>
+            </div>
+        </div>
     </div> 
 </div>
 <script>     
