--- a/src/views/paginas/verCancha.hbs
+++ b/src/views/paginas/verCancha.hbs
@@ -8,7 +8,7 @@
         <div id="scrollMisCanchas" class="row">
             {{#each establecimiento}}
             <div class="col-lg-4 mb-4">
-                <div class="card bg-white">
+                <div class="card bg-white" style="opacity: 1;">
                     <div class="card-header">
                         <b>Cancha Nº {{numeroCancha}} - {{deporte}}</b>
                     </div>
