--- a/src/views/reserva/reservaDeporte.hbs
+++ b/src/views/reserva/reservaDeporte.hbs
@@ -9,7 +9,7 @@
                 <h3 class="text-center mb-4">Elige un Deporte</h3>
                 <div class="text-center">
                     <form action="/paginas/reservaDeporte1/" method="GET">
-                        <select class="btn btn-outline-primary" name="deporte" required>
+                        <select class="btn btn-primary" name="deporte" required>
                             <option value="" selected disabled>Deportes</option>
                             {{#each deporte}}
                             <option value="{{idDeportes}}" required>{{deporte}}</option>
