--- a/src/views/reserva/reservaDeporte2.hbs
+++ b/src/views/reserva/reservaDeporte2.hbs
@@ -7,7 +7,7 @@
             <div class="col-md-4 m-0 mt-3 py-4 pb-5" style="background-color: rgb(255, 255, 255, 0.5);">
                 <div class="text-center">
                     <h3>Elige Turno</h3>
-                    <button class="btn btn-warning mb-3" id="botonTurnos"
+                    <button class="btn btn-primary mb-3" id="botonTurnos"
                         onclick="return misTurnos({{turno.horaInicio}}, {{turno.horaFin}})">Ver Turnos</button>
                     <form action="/paginas/reservaDeporte2/{{idCancha}}&fechaSeleccionada" method="POST">
                         <div class="container">
@@ -16,10 +16,10 @@
                         </div>
                         {{!-- <button id="botonReservar" type="submit" class="btn btn-success text-dark" data-bs-toggle="modal" data-bs-target="#exampleModal" disabled>Reservar</button> --}}
                         <div class="col-1 mt-5 py-1">
-                            <a id="volver" href="javascript: history.go(-1)" type="button" class="btn btn-outline-danger">Volver</a>
+                            <a id="volver" href="javascript: history.go(-1)" type="button" class="btn btn-danger">Volver</a>
                         </div>
                         <div class="col-1 py-1">
-                            <a id="volver" href="/paginas/inicio" type="button" class="btn btn-outline-danger">Salir</a>
+                            <a id="volver" href="/paginas/inicio" type="button" class="btn btn-danger">Salir</a>
                         </div>
                     </form>
                 </div>
