tarjeta de canchas

--- a/src/views/paginas/verCancha.hbs
+++ b/src/views/paginas/verCancha.hbs
@@ -11,7 +11,7 @@
                 <div id="semiTransparente" class="card-body text-white">
                     <i type="text">Dirección: <b>{{direccion}}</b></i>
                     <br>
-                    <i type="text">Deporte: <b>Fútbol 5</b></i>
+                    <i type="text">Deporte: <b>{{idDeportes}}</b></i>
                 </div>
                 <div class="d-flex justify-content-around">
                     <div id="showMap" style="width: 480px; height: 263px;"></div>
